# WorldEditDocs

./: .gitignore  .gitmodules  .readthedocs.yaml  Gruntfile.js  LICENSE.txt  Makefile  README.md  dev.py  make.bat  package.json  pyproject.toml  requirements.txt
source/: commands.rst  conf.py  config.rst  cuitip.rst  faq.rst  index.rst  install.rst  localisation.rst  permissions.rst  quickstart.rst  requirements.txt  source-code.rst  support.rst
source/_icons/: README.md
source/_static/: custom.css  fabric-permissions.js  perm-converter.css
source/_templates/partials/: page-bottom.html
source/api/: concepts.rst  index.rst  internal_apis.rst
source/api/concepts/: actors.rst  adapters.rst  blocks.rst  edit-sessions.rst  extents.rst  index.rst  local-sessions.rst  patterns-and-masks.rst  regions.rst  registries.rst
source/api/examples/: clipboard.rst  index.rst  local-sessions.rst  selections.rst
source/usage/: butcherflags.rst  clipboard.rst  generation.rst  index.rst  navigation.rst  snapshots.rst  tools.rst  utilities.rst
source/usage/general/: history.rst  index.rst  masks.rst  patterns.rst  sessions.rst
source/usage/other/: craftscripts.rst  expressions.rst  index.rst
source/usage/regions/: index.rst  regionops.rst  selections.rst
source/usage/tools/: brushes.rst  tools.rst
