[project]
name = "WorldEditDocs"
version = "0.0.1"
description = "WorldEdit documentation"
readme = "README.md"
requires-python = ">=3.14"
classifiers = [
    "Private :: Do Not Upload",
]

[tool.uv.extra-build-dependencies]
# Can be removed with https://github.com/EngineHub/sphinxcontrib.youtube/pull/1
enginehub-sphinx-youtube = ["setuptools==80.10.2"]

[dependency-groups]
# Dependencies for `dev.py`.
dev = [
    { include-group = "docs" },
    "watchdog>=6.0.0",
]
# Dependencies for building the documentation.
docs = [
    "enginehub-sphinx-youtube>=0.2.3",
    "shibuya>=2026.1.9",
    "sphinx>=9.1.0",
]
